--- a/views/create.ejs
+++ b/views/create.ejs
@@ -13,7 +13,7 @@
     <form action="">
         <input type="text" name="name" id="name" placeholder="Nome do paciente" class="form-control">
         <br><input type="email" name="email" id="email" placeholder="email@exemple.com" class="form-control">
-        <br><input type="text" name="cpf" id="cpf" placeholder="CPF do cliente" class="form-control">
+        <br><input type="text" name="cpf" id="cpf" placeholder="CPF do cliente" class="form-control cpf">
         <br><input type="text" name="description" id="description" class="form-control" placeholder="Descrição">
         <br><input type="date" name="date" id="date" class="form-control" placeholder="00/00/0000">
         <br><input type="time" name="time" id="time" class="form-control">
@@ -23,4 +23,9 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="jquery.mask.min.js"></script>
+<script>
+    $('.cpf').mask('000.000.000-00', {reverse: true});
+</script>
 </html>
