Seção 29 - Aula 354. Service de consulta

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -10,7 +10,7 @@
 <body>
     <h1>Cadastro de consulta</h1>
     <hr>
-    <form action="">
+    <form action="create" method="POST">
         <input type="text" name="name" id="name" placeholder="Nome do paciente" class="form-control">
         <br><input type="email" name="email" id="email" placeholder="email@exemple.com" class="form-control">
         <br><input type="text" name="cpf" id="cpf" placeholder="CPF do cliente" class="form-control cpf">
