--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,8 @@
     var element = document.getElementById('calendar');
     var calendar = new FullCalendar.Calendar(element, {
         initalView: 'dayGridMonth',
-        locale: 'pt-br'
+        locale: 'pt-br',
+        events: 'getcalendar'
     });
     calendar.render();
 </script>
